swag init for CommentOrder
